# goldstep

./: .gitignore  LICENSE  README.md  pyproject.toml
goldstep/: __init__.py  bridge.py  config.py  diagnostics.py  mcp.py  process.py  sandbox.py  screenshot.py  session.py  statedump.py  tap.py  xephyr.py
